--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -27,8 +27,8 @@ main{
     display: grid;
     height: 100vh;
     width: 100vw;
-    min-height: 730px;
-    min-width: 1000px;
+    /* min-height: 730px;
+    min-width: 1000px; */
     grid-template-rows: 10% 90%;
 }
 
