--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -115,10 +115,10 @@ main{
     height: fit-content;
     height: -moz-max-content;
     margin: auto;
-    top: 40%;
+    /* top: 40%;
     transform: translateY(-50%);
     -webkit-transform:  translateY(-50%);
-    -moz-transform:  translateY(-50%);
+    -moz-transform:  translateY(-50%); */
     text-align: center;
 }
 .user-login-container > h1{
