--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -80,6 +80,8 @@ main{
 .main{
     position: relative;
     background-color: #F5F5F5;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 .main-container{
     position: relative;
@@ -217,6 +219,7 @@ main{
     width: 50px;
     border: none;
     box-shadow: var(--main-shadow);
+    outline: none;
 }
 #red_theme{
     background-color: rgb(234, 76, 137);
