--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat &display=swap');:root {
+@import url('https://fonts.googleapis.com/css?family=Montserrat &display=swap');
+:root {
     --main-color: #2784FB;
     --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, .2);
     --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, .2);
@@ -105,9 +106,7 @@ main {
 .not-logged-in {
     display: none;
 }
-.invert-btn {
-    
-}
+
 
 
 
@@ -351,6 +350,9 @@ main {
 
 /* Home page Create Event: End */
 
+
+/* Quiz and Poll create */
+
 .quiz-create-container{
     position: relative;
     display: grid;
@@ -360,19 +362,19 @@ main {
     row-gap: 40px;
     padding-top: 13vh;
 }
-.quiz-create-container  input{
+.quiz-create-container  input, .poll-create-container input, .feedback-create-container textarea{
     padding-top: 17px;
     padding-bottom: 17px;
     border-radius: 7px;
 }
-.quiz-create-container > label, .poll-create-container > label{
+.quiz-create-container > label, .poll-create-container > label, .feedback-create-container > label{
     font-weight: 900;
     font-size: 1.3rem;
 }
-label[for = "question_name"], label[for = "poll_name"]{
+label[for = "question_name"], label[for = "poll_name"], label[for = "feedback_name"]{
     grid-area: l1;
 }
-#question_name, #poll_name{
+#question_name, #poll_name, #feedback_name{
     grid-area: i1;
 }
 label[for = "correct_option"]{
@@ -401,9 +403,9 @@ label[for = "theme"], label[for = "theme_poll"]{
 .theme{
     grid-area: i5;
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, 32%);
     width: 100%;
-    column-gap: 10px;
+    column-gap: 1%;
 }
 .quiz-actions, .poll-actions{
     grid-area: i6;
@@ -420,13 +422,7 @@ label[for = "theme"], label[for = "theme_poll"]{
     font-weight: 700;
     border-radius: 5px;
 }
-.theme > button{
-    background-color: white;
-    border-radius: 30px;
-}
-.theme > button:hover{
-    background-color: var(--main-color);
-}
+
 
 .poll-create-container{
     position: relative;
@@ -441,6 +437,25 @@ label[for = "theme"], label[for = "theme_poll"]{
 
 
 
+.feedback-create-container{
+    position: relative;
+    display: grid;
+    grid-template-areas: "l1 i1" ". ." "n2 i5" ". ." ". ." ". ." ". x";
+    width: 90%;
+    margin: auto;
+    row-gap: 5.4vh;
+    padding-top: 13vh;
+}
+label[ for = "theme_feedback"]{
+    grid-area: n2;
+}
+.feedback-actions{
+    grid-area: x;
+}
+
+
+
+/* Quiz and Poll create: End */
 
 
 
@@ -455,6 +470,49 @@ label[for = "theme"], label[for = "theme_poll"]{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+::-webkit-scrollbar {
+    background-color:#fff;
+    width:16px
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+    background-color:#fff
+}
+::-webkit-scrollbar-track:hover {
+    background-color:#f4f4f4
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+    background-color:#babac0;
+    border-radius:16px;
+    border:5px solid #fff
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color:#a0a0a5;
+    border:4px solid #f4f4f4
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {display:none}
+
+.white{
+    fill: white;
+}
 
 
 button{
@@ -494,4 +552,23 @@ button{
 .login-background {
     background-color: #F5F5F5;
     box-shadow: none;
+}
+
+ .theme-btn{
+    background-color: white;
+    border-radius: 30px;
+    color: var(--main-color)
+}
+
+
+.theme-btn:hover{
+    background-color: var(--main-color);
+    color: white;
+}
+.white-select{
+    fill: white;
+}
+.blue-select{
+    background-color: var(--main-color);
+    color: white;
 }
