--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat &display=swap');
-:root {
+@import url('https://fonts.googleapis.com/css?family=Montserrat &display=swap');:root {
     --main-color: #2784FB;
-    --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, .2);
-    --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, .2);
+    --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.2);
+    --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);
     --neon-button-hover: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4;
 }
 
@@ -106,8 +105,6 @@ main {
 .not-logged-in {
     display: none;
 }
-
-
 
 
 /* Login Page */
@@ -215,19 +212,19 @@ main {
     background-color: rgb(234, 76, 137);
 }
 #red_theme:hover {
-    box-shadow: inset -6px -6px 10px rgba(234, 76, 137, 1), inset 6px 6px 20px rgba(0, 0, 0, .15);
+    box-shadow: inset -6px -6px 10px rgba(234, 76, 137, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.15);
 }
 #green_theme {
     background-color: rgb(131, 211, 157);
 }
 #green_theme:hover {
-    box-shadow: inset -6px -6px 10px rgb(131, 211, 157), inset 6px 6px 20px rgba(0, 0, 0, .15);
+    box-shadow: inset -6px -6px 10px rgb(131, 211, 157), inset 6px 6px 20px rgba(0, 0, 0, 0.15);
 }
 #blue_theme {
     background-color: rgb(39, 132, 251);
 }
 #blue_theme:hover {
-    box-shadow: inset -6px -6px 10px rgb(39, 132, 251), inset 6px 6px 20px rgba(0, 0, 0, .15);
+    box-shadow: inset -6px -6px 10px rgb(39, 132, 251), inset 6px 6px 20px rgba(0, 0, 0, 0.15);
 }
 #dark_theme {
     background-color: black;
@@ -242,7 +239,7 @@ main {
 /* Login Page: End */
 
 /* Home page History */
-.icons{
+.icons {
     position: relative;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -250,12 +247,12 @@ main {
     padding: 20px;
     justify-items: right;
 }
-.history-icon{
+.history-icon {
     position: relative;
     width: 100px;
     justify-self: left;
 }
-.add-event-btn{
+.add-event-btn {
     position: relative;
     padding: 10px 20px;
     outline: none;
@@ -269,7 +266,7 @@ main {
     -webkit-transform: none;
     -moz-transform: none;
 }
-.history-grid{
+.history-grid {
     position: relative;
     display: grid;
     grid-template-columns: repeat(4, auto);
@@ -284,14 +281,14 @@ main {
 
 /* Home page Create Event */
 
-.event-create-container{
+.event-create-container {
     position: relative;
     width: 90%;
     margin: auto;
     height: 100%;
     text-align: center;
 }
-.event-create-container > h1{
+.event-create-container > h1 {
     padding-top: 130px;
     margin-bottom: 40px;
     position: relative;
@@ -299,36 +296,35 @@ main {
     color: var(--main-color);
     margin-bottom: 20px;
 }
-#create_event_form{
+#create_event_form {
     position: relative;
     width: 100%;
 
 }
-#create_event_form > button{
+#create_event_form > button {
     display: block;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin: 40px auto;
 }
-#create_event_form > input{
+#create_event_form > input {
     width: calc(60% - 10px);
 }
-#create_event_form > label{
+#create_event_form > label {
     margin-right: 30px;
     font-weight: 900;
     font-size: 1.2rem;
 }
-.add-action{
+.add-action {
     position: relative;
     margin-top: 70px;
     display: none;
+    margin-bottom: 30px;
 }
-.add-action > h1{
+.add-action > h1 {
     font-size: 2.2rem;
     color: var(--main-color);
     margin-bottom: 20px;
 }
-.back-btn{
+.back-btn {
     left: initial;
     transform: none;
     -webkit-transform: none;
@@ -341,10 +337,10 @@ main {
     margin-left: 20px;
     cursor: pointer;
 }
-.back-btn > img{
+.back-btn > img {
     width: 30px;
 }
-#event-code{
+#event-code {
     display: none;
 }
 
@@ -353,7 +349,7 @@ main {
 
 /* Quiz and Poll create */
 
-.quiz-create-container{
+.quiz-create-container {
     position: relative;
     display: grid;
     grid-template-areas: "l1 i1" "l2 i2" "l3 i3" ". i4" "l5 i5" ". i6";
@@ -362,31 +358,41 @@ main {
     row-gap: 40px;
     padding-top: 13vh;
 }
-.quiz-create-container  input, .poll-create-container input, .feedback-create-container textarea{
+.quiz-create-container input,
+.poll-create-container input,
+.feedback-create-container textarea {
     padding-top: 17px;
     padding-bottom: 17px;
     border-radius: 7px;
 }
-.quiz-create-container > label, .poll-create-container > label, .feedback-create-container > label{
+.quiz-create-container > label,
+.poll-create-container > label,
+.feedback-create-container > label {
     font-weight: 900;
     font-size: 1.3rem;
 }
-label[for = "question_name"], label[for = "poll_name"], label[for = "feedback_name"]{
+label[for = "question_name"],
+label[for = "poll_name"],
+label[for = "feedback_name"] {
     grid-area: l1;
 }
-#question_name, #poll_name, #feedback_name{
+#question_name,
+#poll_name,
+#feedback_name {
     grid-area: i1;
 }
-label[for = "correct_option"]{
+label[for = "correct_option"] {
     grid-area: l2;
 }
-#correct_option{
+#correct_option {
     grid-area: i2;
 }
-label[for = "quiz_options"], label[for = "quiz_options"]{
+label[for = "quiz_options"],
+label[for = "poll_options"] {
     grid-area: l3;
 }
-#quiz_options_div, #poll_options_div{
+#quiz_options_div,
+#poll_options_div {
     grid-area: i3;
     position: relative;
     display: grid;
@@ -394,29 +400,33 @@ label[for = "quiz_options"], label[for = "quiz_options"]{
     column-gap: 4%;
     row-gap: 20px;
 }
-.add-remove-options{
+.add-remove-options {
     grid-area: i4;
 }
-label[for = "theme"], label[for = "theme_poll"]{
+label[for = "theme"],
+label[for = "theme_poll"] {
     grid-area: l5;
 }
-.theme{
+.theme {
     grid-area: i5;
     display: grid;
     grid-template-columns: repeat(3, 32%);
     width: 100%;
     column-gap: 1%;
 }
-.quiz-actions, .poll-actions{
+.quiz-actions,
+.poll-actions {
     grid-area: i6;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
-.quiz-actions > button, .poll-actions > button{
+.quiz-actions > button,
+.poll-actions > button, .feedback-actions > button {
     font-size: 1rem;
     font-weight: 700;
     border-radius: 5px;
 }
-.add-remove-options > button{
+.add-remove-options > button {
     padding: 10px 60px;
     font-size: 1rem;
     font-weight: 700;
@@ -424,7 +434,7 @@ label[for = "theme"], label[for = "theme_poll"]{
 }
 
 
-.poll-create-container{
+.poll-create-container {
     position: relative;
     display: grid;
     grid-template-areas: "l1 i1" "l3 i3" ". i4" "l5 i5" ". i6";
@@ -435,9 +445,7 @@ label[for = "theme"], label[for = "theme_poll"]{
 }
 
 
-
-
-.feedback-create-container{
+.feedback-create-container {
     position: relative;
     display: grid;
     grid-template-areas: "l1 i1" ". ." "n2 i5" ". ." ". ." ". ." ". x";
@@ -446,80 +454,56 @@ label[for = "theme"], label[for = "theme_poll"]{
     row-gap: 5.4vh;
     padding-top: 13vh;
 }
-label[ for = "theme_feedback"]{
+label[for = "theme_feedback"] {
     grid-area: n2;
 }
-.feedback-actions{
+.feedback-actions {
     grid-area: x;
 }
-
 
 
 /* Quiz and Poll create: End */
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ::-webkit-scrollbar {
-    background-color:#fff;
-    width:16px
+    background-color: #fff;
+    width: 16px
 }
 
 /* background of the scrollbar except button or resizer */
 ::-webkit-scrollbar-track {
-    background-color:#fff
+    background-color: #fff
 }
 ::-webkit-scrollbar-track:hover {
-    background-color:#f4f4f4
+    background-color: #f4f4f4
 }
 
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
-    background-color:#babac0;
-    border-radius:16px;
-    border:5px solid #fff
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 5px solid #fff
 }
 ::-webkit-scrollbar-thumb:hover {
-    background-color:#a0a0a5;
-    border:4px solid #f4f4f4
+    background-color: #a0a0a5;
+    border: 4px solid #f4f4f4
 }
 
 /* set button(top and bottom of the scrollbar) */
-::-webkit-scrollbar-button {display:none}
+::-webkit-scrollbar-button {
+    display: none
+}
 
-.white{
+.white {
     fill: white;
 }
 
 
-button{
+button {
     outline: none;
 }
 
-.main-button{
+.main-button {
     padding: 12px 40px;
     border-radius: 3px;
     background-color: var(--main-color);
@@ -528,10 +512,10 @@ button{
     font-size: 1.1rem;
     box-shadow: var(--main-shadow);
 }
-.main-button:hover{
+.main-button:hover {
     box-shadow: var(--main-shadow-hover);
 }
-.main-input{
+.main-input {
     padding: 10px 0 10px 10px;
     border: solid var(--main-color) 1.5px;
     border-radius: 5px;
@@ -554,21 +538,209 @@ button{
     box-shadow: none;
 }
 
- .theme-btn{
+.theme-btn {
     background-color: white;
     border-radius: 30px;
     color: var(--main-color)
 }
 
 
-.theme-btn:hover{
+.theme-btn:hover {
     background-color: var(--main-color);
     color: white;
 }
-.white-select{
+.white-select {
     fill: white;
 }
-.blue-select{
+.blue-select {
     background-color: var(--main-color);
     color: white;
+}
+.options-container-mobile {
+    display: none;
+}
+.nav-control{
+    display: none;
+}
+
+
+@media(max-width: 600px) {
+    * {
+        box-sizing: border-box;
+    }
+    .not-mobile {
+        display: none;
+    }
+    .header {
+        width: 100%;
+        position: relative;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        justify-items: left;
+        align-items: center;
+    }
+    .header > button {
+        justify-self: right;
+        margin-right: 10px;
+        font-size: 0.9rem;
+        padding: 10px;
+    }
+    .main-button {
+        padding: 10px;
+        font-size: 0.9rem;
+    }
+    h1 {
+        font-size: 2rem;
+    }
+    .main-container{
+        margin-bottom: 30px;
+    }
+    .user-login-container {
+        width: 95%;
+    }
+    .user-login-container > h1 {
+        font-size: 2rem;
+    }
+    #login_form {
+        width: 100%;
+        grid-template-areas: "label1 label1" "input1 input1" "label2 label2" "input2 input2" "button button";
+
+    }
+    .login-label-1 {
+        margin-bottom: 0;
+    }
+    #user_email {
+        margin-top: 30px;
+    }
+    .choose-theme {
+        width: 100%;
+        padding: 10px;
+    }
+    .choose-theme > h1 {
+        font-size: 1.5rem;
+    }
+    .choose-theme > button {
+        margin: 10px;
+        height: 40px;
+        width: 40px;
+    }
+    .nav-control{
+        position: relative;
+        display: grid;
+        width:fit-content;
+        width: -moz-fit-content;
+        height: fit-content;
+        height: -moz-fit-content;
+        grid-template-columns: auto auto;
+        margin-top: 10px;
+        margin-left: 10px;
+        column-gap: 10px;
+        display: none;
+    }
+    .options-container-mobile {
+        position: absolute;
+        display: block;
+        height: 100vh;
+        width: 100vw;
+        z-index: 10;
+        clip-path: circle(10px at -5% 10%);
+        -webkit-clip-path: circle(10px at -5% 10%);
+        transition: clip-path ease-out 1s;
+        -webkit-transition: -webkit-clip-path ease-out 1s;
+        background: white;
+    }
+    .ham{
+        z-index: 100;
+    }
+    .open{
+        clip-path: circle(1500px at 90.7% 3.5%);
+        -webkit-clip-path: circle(1500px at 90.7% 3.5%);
+    }
+    .nav-container {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        width: fit-content;
+        width: -moz-max-content;
+        margin: auto;
+
+    }
+    .icons{
+        width: 100%;
+        align-items: center;
+    }
+    .event-create-container > h1 {
+        padding-top: 100px;
+        position: relative;
+        font-size: 2.0rem;
+        color: var(--main-color);
+        margin-bottom: 20px;
+    }
+    #create_event_form > label{
+        text-align: center;
+        margin-right: auto;
+    }
+    #create_event_form > input{
+        width: 90%;
+        margin-top: 20px;
+    }
+    .quiz-create-container{
+        grid-template-areas: 
+        "l1 l1" "i1 i1" "l2 l2" "i2 i2" "l3 l3" "i3 i3" "i4 i4" "l5 l5" "i5 i5" "i6 i6";
+        justify-items: center;
+        padding-top: 6vh;
+    }
+    #quiz_options_div, #poll_options_div{
+        grid-template-columns: auto;
+        width: 100%;
+    }
+    .add-remove-options > button{
+        padding: 10px 0;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .theme{
+        grid-template-columns: auto;
+        width: 90%;
+    }
+    .theme-btn{
+        margin-bottom: 20px;
+    }
+    .quiz-create-container input, .poll-create-container input, .feedback-create-container textarea{
+        padding-top: 13px;
+        padding-bottom: 13px;
+        width: 90%;
+        margin: auto;
+    }
+    .poll-create-container{
+        padding-top: 6vh;
+        grid-template-areas: 
+        "l1 l1" "i1 i1" "l3 l3" "i3 i3" "i4 i4" "l5 l5" "i5 i5" "i6 i6";
+        justify-items: center;
+    }
+    .feedback-create-container{
+        padding-top: 6vh;
+        grid-template-areas: 
+        "l1 l1" "i1 i1" "n2 n2" "i5 i5" ". ." "x x";
+        justify-items: center;
+    }
+    .quiz-actions > button, .poll-actions > button, .feedback-actions > button{
+        margin: auto;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+
+
+
+
+
+    .mobile {
+        display: block;
+    }
+    .mobile-grid{
+        display: grid;
+    }
 }
