--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -565,9 +565,9 @@ button {
 
 
 @media(max-width: 600px) {
-    /* * {
+    * {
         box-sizing: border-box;
-    } */
+    }
     main{
         grid-template-rows: 8% 92;
     }
