--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -92,12 +92,7 @@ main {
     height: -moz-max-content;
     width: 100%;
 }
-.create {
-    display: none;
-}
-.result {
-    display: none;
-}
+
 .tab-content {
     display: none;
     position: relative;
@@ -482,6 +477,32 @@ label[for = "theme_feedback"] {
 
 /* Quiz and Poll create: End */
 
+/* Quiz Result */
+
+.quiz-result{
+    position: relative;
+    display: grid;
+    height: 100%;
+    width: 100%;
+}
+.quiz-details{
+    position: relative;
+}
+.quiz-result-buttons{
+    position: relative;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+/* Quiz Result: End */
+
+
+
+
+
+
 
 ::-webkit-scrollbar {
     background-color: #fff;
@@ -520,7 +541,12 @@ label[for = "theme_feedback"] {
 button {
     outline: none;
 }
-
+.create {
+    display: none;
+}
+.result {
+    display: none;
+}
 .main-button {
     padding: 12px 40px;
     border-radius: 3px;
