--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -500,6 +500,33 @@ label[for = "theme_feedback"] {
 
 
 
+.notify{
+    position: absolute;
+    z-index: 100;
+    bottom: 0;
+    width: fit-content;
+    width: -moz-max-content;
+    padding: 10px 20px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    background: var(--main-color);
+    color: white;
+    opacity: 0;
+    transition: opacity 1s ease-out;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-shadow: var(--main-shadow);
+}
+.enter{
+    opacity: 1;
+}
+
+
+
+
+
 
 
 
