--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat &display=swap');:root {
+
+:root {
     --main-color: #2784FB;
     --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, 0.2);
     --main-shadow-hover: inset -6px -6px 10px rgba(39, 132, 251, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);
