--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -22,8 +22,8 @@ main {
     display: grid;
     height: 100vh;
     width: 100vw;
-    /* min-height: 730px;
-    min-width: 1000px; */
+    /* min-height: 730px; */
+    min-width: 864px;
     grid-template-rows: 10% 90%;
 }
 
@@ -534,26 +534,26 @@ label[for = "theme_feedback"] {
 
 ::-webkit-scrollbar {
     background-color: #fff;
-    width: 16px
+    width: 20px;
 }
 
 /* background of the scrollbar except button or resizer */
 ::-webkit-scrollbar-track {
-    background-color: #fff
+    background-color: #F5F5F5;
 }
 ::-webkit-scrollbar-track:hover {
-    background-color: #f4f4f4
+    background-color: #F5F5F5;
 }
 
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
     background-color: #babac0;
     border-radius: 16px;
-    border: 5px solid #fff
+    border: 5px solid #F5F5F5;
 }
 ::-webkit-scrollbar-thumb:hover {
     background-color: #a0a0a5;
-    border: 4px solid #f4f4f4
+    border: 4px solid #f4f4f4;
 }
 
 /* set button(top and bottom of the scrollbar) */
@@ -641,7 +641,8 @@ button {
         box-sizing: border-box;
     }
     main{
-        grid-template-rows: 8% 92;
+        min-width: 0;
+        grid-template-rows: 8% 92%;
     }
     .main-container{
         height: 90%;
