--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -534,22 +534,22 @@ label[for = "theme_feedback"] {
 
 ::-webkit-scrollbar {
     background-color: #fff;
-    width: 20px;
+    width: 16px;
 }
 
 /* background of the scrollbar except button or resizer */
 ::-webkit-scrollbar-track {
-    background-color: #F5F5F5;
+    background-color: #fff;
 }
 ::-webkit-scrollbar-track:hover {
-    background-color: #F5F5F5;
+    background-color: #fff;
 }
 
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
     background-color: #babac0;
     border-radius: 16px;
-    border: 5px solid #F5F5F5;
+    border: 5px solid #fff;
 }
 ::-webkit-scrollbar-thumb:hover {
     background-color: #a0a0a5;
