--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -303,7 +303,7 @@ main {
     text-align: center;
 }
 .event-create-container > h1 {
-    padding-top: 130px;
+    padding-top: 8vh;
     margin-bottom: 40px;
     position: relative;
     font-size: 2.2rem;
@@ -500,6 +500,79 @@ label[for = "theme_feedback"] {
 /* Quiz Result: End */
 
 
+/* Feedback Result: Start */
+
+.feedback-result{
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+.refresh-btn{
+    position: absolute;
+    width: 35px;
+    outline: none;
+    background: none;
+    border: none;
+    right: 0;
+    margin-top: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+.refresh-btn > img{
+    width: 35px;
+}
+.feedback-result-grid{
+    position: relative;
+    display: grid;
+    grid-template-rows: auto auto;
+    margin-top: 5vh;
+}
+.feedback-details{
+    position: relative;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+.feedback-details > h1{
+    margin-bottom: 30px;
+}
+.feedback-answer{
+    position: relative;
+    width: 100%;
+}
+.answer{
+    position: relative;
+    width: 80%;
+    margin: auto;
+    padding: 50px 0;
+    background: lightgreen;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
+    height: auto;
+    text-align: center;
+}
+
+.feedback-result-buttons{
+    position: relative;
+    width: fit-content;
+    width: -moz-max-content;
+    margin: auto;
+}
+
+/* Feedback Result: End */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .notify{
     position: absolute;
@@ -534,7 +607,7 @@ label[for = "theme_feedback"] {
 
 ::-webkit-scrollbar {
     background-color: #fff;
-    width: 16px;
+    width: 10px;
 }
 
 /* background of the scrollbar except button or resizer */
@@ -548,12 +621,12 @@ label[for = "theme_feedback"] {
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
     background-color: #babac0;
-    border-radius: 16px;
-    border: 5px solid #fff;
+    border-radius: 10px;
+    border: 2px solid #fff;
 }
 ::-webkit-scrollbar-thumb:hover {
     background-color: #a0a0a5;
-    border: 4px solid #f4f4f4;
+    border: 2px solid #f4f4f4;
 }
 
 /* set button(top and bottom of the scrollbar) */
@@ -811,7 +884,18 @@ button {
         width: 100%;
         margin-bottom: 20px;
     }
-
+    .answer{
+        width: 100%;
+    }
+    .feedback-result-buttons{
+        width: 80%;
+        text-align: center;
+        margin: 30px auto;
+    }
+    .feedback-result-buttons > button{
+        width: 100%;
+        margin-bottom: 15px;
+    }
     .this-event{
         grid-template-columns: none;
     }
