--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -155,7 +155,7 @@ main {
     position: relative;
     display: grid;
     width: 70%;
-    box-shadow: var(--main-shadow);
+    /* box-shadow: var(--main-shadow); */
     background-color: white;
     margin: auto;
     border-radius: 10px;
@@ -186,7 +186,7 @@ main {
     padding: 10px 0 10px 10px;
     border: solid var(--main-color) 1.5px;
     border-radius: 5px;
-    box-shadow: var(--main-shadow);
+    /* box-shadow: var(--main-shadow); */
     outline: none;
 }
 #user_pass {
@@ -196,7 +196,7 @@ main {
     padding: 10px 0 10px 10px;
     border: solid var(--main-color) 1.5px;
     border-radius: 5px;
-    box-shadow: var(--main-shadow);
+    /* box-shadow: var(--main-shadow); */
     outline: none;
 }
 #login_button {
@@ -215,7 +215,7 @@ main {
     padding: 0 10px;
     border-radius: 10px;
     background-color: white;
-    box-shadow: var(--main-shadow);
+    /* box-shadow: var(--main-shadow); */
 }
 .choose-theme > h1 {
     position: relative;
@@ -280,7 +280,6 @@ main {
 }
 .add-event-btn {
     position: relative;
-    padding: 10px 20px;
     outline: none;
     border: none;
     border-radius: 3px;
@@ -333,7 +332,7 @@ main {
     text-align: center;
 }
 .event-create-container > h1 {
-    padding-top: 8vh;
+    padding-top: 6vh;
     margin-bottom: 40px;
     position: relative;
     font-size: 2.2rem;
@@ -359,9 +358,9 @@ main {
 }
 .add-action {
     position: relative;
-    margin-top: 70px;
+    margin-top: 5vh;
     display: none;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .add-action > h1 {
     font-size: 2.2rem;
@@ -406,8 +405,8 @@ main {
 .quiz-create-container input,
 .poll-create-container input,
 .feedback-create-container textarea {
-    padding-top: 17px;
-    padding-bottom: 17px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     border-radius: 7px;
     box-shadow: none;
 }
@@ -527,7 +526,7 @@ label[for = "theme_feedback"] {
     position: relative;
     text-align: center;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 
@@ -621,7 +620,7 @@ label[for = "theme_feedback"] {
 
 .possible-actions{
     position: relative;
-    width: 50%;
+    width: 30%;
     display: grid;
     grid-template-columns: auto auto auto;
     justify-items: left;
@@ -767,7 +766,12 @@ label[for = "theme_feedback"] {
     position: relative;
 
 }
+.loading-gif{
+    height: 1.1rem;
+    width: auto;
+    background-color: transparent;
 
+}
 
 
 
@@ -820,11 +824,16 @@ button {
 }
 .main-button {
     padding: 12px 40px;
+    box-sizing: border-box;
+    white-space:normal !important;
+    word-wrap:break-word;
     border-radius: 3px;
     background-color: var(--main-color);
     border: none;
     color: white;
     font-size: 1.1rem;
+    
+    
     box-shadow: var(--main-shadow);
 }
 .main-button:hover {
@@ -839,7 +848,9 @@ button {
     box-shadow: var(--main-shadow);
     outline: none;
 }
-
+.add-event-btn{
+    padding: 10px 30px;
+}
 
 .show {
     display: block;
@@ -861,7 +872,13 @@ button {
     color: var(--main-color)
 }
 
-
+.button-hover{
+    background-color: rgb(253, 57, 57);
+}
+.button-hover:hover{
+    background-color: rgb(253, 57, 57);
+    box-shadow: inset -6px -6px 10px rgb(253, 57, 57), inset 6px 6px 20px rgba(0, 0, 0, 0.2);;
+}
 .theme-btn:hover {
     background-color: var(--main-color);
     color: white;
@@ -1036,8 +1053,8 @@ button {
         margin-bottom: 20px;
     }
     .quiz-create-container input, .poll-create-container input, .feedback-create-container textarea{
-        padding-top: 13px;
-        padding-bottom: 13px;
+        padding-top: 10px;
+        padding-bottom: 10px;
         width: 90%;
         margin: auto;
     }
