--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -779,10 +779,11 @@ label[for = "theme_feedback"] {
 
 }
 .loading-gif{
-    height: 1.1rem;
+    height: 1.0rem;
     width: auto;
     background-color: transparent;
-
+    object-fit: scale-down;
+    overflow: hidden;
 }
 .first-deet{
     color: rgb(150,150,150);
@@ -956,6 +957,21 @@ button {
 .show-action{
     display: grid;
 }
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    /* width: 120px;
+    height: 120px; */
+    /* width: auto; */
+    height: 100%;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 
 @media(max-width: 600px) {
     * {
