--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -1190,6 +1190,13 @@ button {
         width: 100%;
         margin-bottom: 10px;
     }
+    .event{
+        grid-template-columns: repeat(3, 33.3%);
+        /* column-gap: 1%; */
+        justify-items: center;
+        text-align: center;
+        font-size: 0.9rem;
+    }
     /* .feedback-question{
         font-size: 1rem;
         word-wrap: break-word;
