--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -309,7 +309,7 @@ main {
 .event{
     position: relative;
     display: grid;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: 33% 22% 22% 22%;
     padding: 10px 0;
     border-bottom: solid 1px rgb(202, 202, 202);
     border-collapse:collapse;
@@ -319,6 +319,9 @@ main {
 }
 .event >p:nth-child(4){
     justify-self: right;
+}
+.event > p:nth-child(1){
+    width: 90%;
 }
 /* Home page History: End */
 
@@ -1191,7 +1194,7 @@ button {
         margin-bottom: 10px;
     }
     .event{
-        grid-template-columns: repeat(3, 33.3%);
+        grid-template-columns: 40% 30% 30%;
         /* column-gap: 1%; */
         justify-items: center;
         text-align: center;
