--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -618,7 +618,7 @@ label[for = "theme_feedback"] {
     width: -moz-fit-content;
     list-style-type: disc;
 }
-.actions > p{
+.actions > li{
     cursor: pointer;
 }
 
@@ -839,7 +839,6 @@ label[for = "theme_feedback"] {
 
 
 
-
 ::-webkit-scrollbar {
     background-color: #fff;
     width: 10px;
@@ -961,21 +960,13 @@ button {
 .show-action{
     display: grid;
 }
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    /* width: 120px;
-    height: 120px; */
-    /* width: auto; */
-    height: 100%;
-    animation: spin 2s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+.disable-btn{
+    background-color: rgb(150, 150, 150);
+}
+.disable-btn:hover{
+    background-color: rgb(150, 150, 150);
+    box-shadow: inset -6px -6px 10px rgba(150, 150, 150, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.2);;
+}
 
 @media(max-width: 600px) {
     * {
