--- a/create/css/main2.css
+++ b/create/css/main2.css
@@ -232,7 +232,7 @@ main {
     outline: none;
 }
 #red_theme {
-    background-color: rgb(234, 76, 137);
+    background-color: #EA4C89;
 }
 #red_theme:hover {
     box-shadow: inset -6px -6px 10px rgba(234, 76, 137, 1), inset 6px 6px 20px rgba(0, 0, 0, 0.15);
@@ -248,6 +248,12 @@ main {
 }
 #blue_theme:hover {
     box-shadow: inset -6px -6px 10px rgb(39, 132, 251), inset 6px 6px 20px rgba(0, 0, 0, 0.15);
+}
+#orange_theme{
+    background-color: #F89224;
+}
+#orange_theme:hover {
+    box-shadow: inset -6px -6px 10px #F89224, inset 6px 6px 20px rgba(0, 0, 0, 0.15);
 }
 #dark_theme {
     background-color: black;
